# carni_detect

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: data_check.ipynb  prediction_test.ipynb
src/carni_detect/: __init__.py  app.py  config.py  evaluate_model.py  generate_augmented_data.py  main.py  train_model.py
src/carni_detect/utils/: __init__.py  augment_images.py  build_model.py  calculate_metrics.py  get_classes.py  get_fci_links.py  get_image_dataset.py  get_image_datasets.py  get_image_files.py  get_model.py  get_predictions.py  get_random_image.py  get_training_callbacks.py  load_model.py  preprocess_image.py
