[project]
name = "carni-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
carni-detect = "carni_detect:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
