[project]
name = "carni-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "opencv-python>=4.12.0.88",
    "tensorflow[and-cuda]>=2.20.0",
]

[project.scripts]
carni-detect = "carni_detect:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
