[project]
name = "carni-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "tensorflow[and-cuda]>=2.20.0",
]

[project.scripts]
carni-detect = "carni_detect:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
